🐛 fix overflow-y

--- a/assets/scss/theme/post.scss
+++ b/assets/scss/theme/post.scss
@@ -6,7 +6,7 @@
         margin-top: 0;
         border-bottom: none;
         padding-bottom: 0;
-        overflow-y: hidden;
+        overflow-y: -webkit-paged-y;
         &:after {
             display: none;
         }
